# zero_to_prod_rust

./: Cargo.toml  README.md  spec.yaml
.github/workflows/: general.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
