[package]
name = "zero_to_prod_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
config = "0.13.1"
uuid = { version = "1.2.2", features = ["v4"] }
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.6"
unicode-segmentation = "1.10.0"
validator = "0.16.0"

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline"
]

[dev-dependencies]
reqwest = "0.11"
once_cell = "1"
claim = "0.5.0"
fake = "2.5.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
